final version for exam

--- a/root/index.html
+++ b/root/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&family=Inter&family=Karla&display=swap"
-      rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&family=Inter&family=Karla&display=swap"
+    rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Examen Final - Rivera Jorge - FrontEnd I</title>
   </head>
   <body>
@@ -46,7 +46,6 @@
             <p class="quoteDescription" id="quoteDesktop">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.</p>
             <p class="quoteDescription" id="quoteMobile">Manage provides all the functionality your
                 teas needs, without the complexity. Our software is tailor-made for modern digital product teams</p>
-
         </section>
 
 <!-- LIST SECTION -->
@@ -120,7 +119,7 @@
                         <input class="footerInput" type="email" name="" placeholder="Update in your inbox...">
                         <button type="submit" class="goBtn">Go</button>
                     </form>
-                    <div class="footerLinks flexRow">
+                    <nav class="footerLinks flexRow">
                         <ul class="footerLinksList">
                                 <li class="footerLink"><a class="footerA" href="#">Home</a></li>
                                 <li class="footerLink"><a class="footerA" href="#">Pricing</a></li>
@@ -132,7 +131,7 @@
                                 <li class="footerLink"><a class="footerA" href="#">Community</a></li>
                                 <li class="footerLink"><a class="footerA" href="#">Privacy Policy</a></li>
                         </ul>
-                    </div>
+                    </nav>
                     <div class="footerImages flexCol">
                         <nav class="flexRow iconContainer">
                             <a class="socialNetworkAnchor" href="#"><img class="icon" src="./img/icon-facebook.svg"></a>
